solo obtiene la serie 1 y season 1

--- a/laravel/.env
+++ b/laravel/.env
@@ -4,6 +4,11 @@ APP_KEY=base64:Qwt2Zd72m0vZA40Fl4goxQWG9gVTzKz850blI2BxFqs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+
+PAYPAL_CLIENT_ID=AbDTTfE9nus67GlQluDUIP1emZTOYdPybAEAwgp4yg-VR5rXxTiO9gzE6bxQDKLsejMtOlWqwDbFM7Md
+PAYPAL_SECRET=EHgsoDfb1iN-MVJAmo2uuV3Ql1kMlFf11YdHQTtOHVI3TJI-wAteissPnNWPjrbV7sZbv0NBqNF-h4ok
+PAYPAL_MODE=live
+
 ADMIN_NAME=xagape
 ADMIN_EMAIL=xagape@fp.insjoaquimmir.cat
 ADMIN_PASSWORD=12345678
