metodo de subscripcion funcional

--- a/laravel/.env
+++ b/laravel/.env
@@ -20,7 +20,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=ls-037482268abf3e42869de8bdf042ddae1c44712b.cz7osswdpk4q.eu-central-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=23COMPANY
+DB_DATABASE=PRUEBA
 DB_USERNAME=dbmasteruser
 DB_PASSWORD=a=<RCg>FUuAY](82!7bR6H<iSGfyjh+d
 MYSQL_ATTR_SSL_KEY=mysql-client-key.pem
